--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /Module_1_Programming/build/
 /Module1_Programming/build/
 /Module1_Programming/dist/
+/Module_2_Programming/build/
+/Module_2_Programming/dist/
